--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -10,43 +10,62 @@
           <% if teacher_logged_in? %><h3 class="panel-title">成绩管理: <%=@course.name%></h3><% end %>
           <% if student_logged_in? %><h3 class="panel-title">成绩列表</h3><% end %>
         </div>
+
+
         <div class="panel-body" style="min-height: 450px">
           <table class="table table-striped table-hover">
             <thead>
 
             <tr>
+            <%if student_logged_in?%>
               <th>学号</th>
               <th>名字</th>
               <th>专业</th>
               <th>培养单位</th>
               <th>课程</th>
               <th>目前分数</th>
+            <%end%>
+            <% if teacher_logged_in? %>
+              <th>学号</th>
+              <th>姓名</th>
+              <th>专业</th>
+              <th>分数</th>
+              <th><%= link_to "导出", grades_export_path(:course_id=>@course.id,:format => :xls),class: "btn btn-success btn-xs" %>
 
+              </th>
+            <% end %>
             </tr>
             </thead>
+
             <tbody>
 
             <% @grades.each do |grade| %>
                 <tr>
-                  <td><%= grade.user.num %></td>
-                  <td><%= grade.user.name %></td>
-                  <td><%= grade.user.major %></td>
-                  <td><%= grade.user.department %></td>
-                  <td><%= grade.course.name %></td>
-                  <td><%= grade.grade %></td>
+                  <% if student_logged_in? %>
+                    <td><%= grade.user.num %></td>
+                    <td><%= grade.user.name %></td>
+                    <td><%= grade.user.major %></td>
+                    <td><%= grade.user.department %></td>
+                    <td><%= grade.course.name %></td>
+                    <td><%= grade.grade %></td>
+                  <%end%>
 
                   <% if teacher_logged_in? %>
-                      <%= form_for grade, url: grade_url(id: grade.id, course_id: grade.course.id), method: :patch do |f| %>
+                    <td><%= grade.user.num %></td>
+                    <td><%= grade.user.name %></td>
+                    <td><%= grade.user.major %></td>
+                    <td><%= grade.grade %></td>
+                        <%= form_for grade, url: grade_url(id: grade.id, course_id: grade.course.id), method: :patch do |f| %>
                           <td><%= f.text_field :grade %></td>
                           <td><%= f.submit "提交", class: "btn btn-success btn-xs" %></td>
-                      <% end %>
+                        <% end %>
                   <% end %>
 
                 </tr>
             <% end %>
             </tbody>
           </table>
-          <%= will_paginate @grades %>
+          <%#= will_paginate @grades %>
         </div>
       </div>
     </div>
