--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,8 +31,8 @@ footer {
 }
 
 .body-background{
-  background-image: image-url('background.jpg');
-  //background-color: #DADADA;
+  background-image: image-url('bg1.jpg');
+  //background-color: #EFEFEF;
   //background-repeat: no-repeat;
   //background-size: 100% 100%;
 }
@@ -45,6 +45,13 @@ body{
 html {
   height: 100%;
 }
+
+img{
+  width: -moz-available;
+  height: 472px;
+}
+
+
 
 
 
