--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav id = "header" class="navbar navbar-inverse  navbar-fixed-top">
   <div class="container">
 
     <div class="navbar-header">
-      <%= link_to "CourseSelect", root_path, class: 'navbar-brand' %>
+      <%= link_to "国科大教务在线", root_path, class: 'navbar-brand' %>
     </div>
 
     <div class="collapse navbar-collapse">
