--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,15 @@ img{
   width: -moz-available;
   height: 472px;
 }
+.import{
+  margin-left: 250px;
+  margin-top: -54px;
+}
+
+.export{
+  margin-left: 0px;
+  margin-top: -54px;
+}
 
 
 
