--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -158,7 +158,7 @@
 
         <% if student_logged_in? %>
           <a data-toggle="collapse" data-parent="#accordion" href="#DegreeCollapse"><span class="glyphicon glyphicon-user"></span>
-            学位课</a>
+            学位课管理</a>
         <% end %>
       </h4>
     </div>
