--- a/app/views/courses/credit.html.erb
+++ b/app/views/courses/credit.html.erb
@@ -14,7 +14,6 @@
         <div class="panel-body" style="min-height: 450px">
           <table class="table table-striped table-hover">
             <thead>
-
             <tr>
               <th>类别</th>
               <th>公共必修课程及学分</th>
@@ -24,23 +23,18 @@
             </tr>
             </thead>
             <tbody>
-
             <tr>
-
                   <td>学习要求</td>
-                  <td>中国特色主义理论与实践研究(2学分)<br>
+                  <td>
+                    学术道德与学术写作规范（1学分)<br>
+                    中国特色主义理论与实践研究(2学分)<br>
                     自然辩证法概论(1学分)<br>
                     硕士学位英语(3学分)<br>
                   </td>
                   <td> >=2学分  </td>
                   <td> >=12学分 </td>
                   <td> >=30学分 </td>
-
             </tr>
-
-            </tbody>
-
-            <tbody>
             <tr>
                   <td>选课情况</td>
                   <td><%=@public_must_credit%></td>
@@ -48,9 +42,6 @@
                   <td><%=@degree_credit%>学分</td>
                   <td><font color="red"><%=@sum_credit%>学分 </font></td>
             </tr>
-            </tbody>
-
-            <tbody>
             <tr>
                   <td>获取学分</td>
                   <td><font color="red"><%=@get_public_must_credit%>学分</font></td>
@@ -59,7 +50,6 @@
                   <td><font color="red"><%=@get_sum_credit%>学分</font></td>
             </tr>
             </tbody>
-
           </table>
         </div>
       </div>
