--- a/app/views/courses/credit.html.erb
+++ b/app/views/courses/credit.html.erb
@@ -2,10 +2,8 @@
   <div class="row">
     <div class="col-sm-2">
       <%= render "shared/sidenav" %>
-
     </div>
-
-</form>
+    </form>
     <div class="col-sm-10">
       <div class="panel panel-primary">
         <div class="panel-heading">
@@ -13,7 +11,8 @@
         </div>
         <div class="panel-body" style="min-height: 450px">
           <table class="table table-striped table-hover">
-            <thead>
+            <label style="color: #999999">满足学习要求是以获取学分是否满足学习要求为判断依据。</label>
+            <tr></tr>
             <tr>
               <th>类别</th>
               <th>公共必修课程及学分</th>
@@ -24,30 +23,30 @@
             </thead>
             <tbody>
             <tr>
-                  <td>学习要求</td>
-                  <td>
-                    学术道德与学术写作规范（1学分)<br>
-                    中国特色主义理论与实践研究(2学分)<br>
-                    自然辩证法概论(1学分)<br>
-                    硕士学位英语(3学分)<br>
-                  </td>
-                  <td> >=2学分  </td>
-                  <td> >=12学分 </td>
-                  <td> >=30学分 </td>
+              <td>学习要求</td>
+              <td>
+                学术道德与学术写作规范（1学分)<br>
+                中国特色主义理论与实践研究(2学分)<br>
+                自然辩证法概论(1学分)<br>
+                硕士学位英语(3学分)<br>
+              </td>
+              <td> >=2学分 </td>
+              <td> >=12学分 </td>
+              <td> >=30学分 </td>
             </tr>
             <tr>
-                  <td>选课情况</td>
-                  <td><%=@public_must_credit%></td>
-                  <td><%=@public_credit%>学分 </td>
-                  <td><%=@degree_credit%>学分</td>
-                  <td><font color="red"><%=@sum_credit%>学分 </font></td>
+              <td>选课情况</td>
+              <td><%=@public_must_credit%></td>
+              <td><%=@public_credit%>学分 </td>
+              <td><%=@degree_credit%>学分</td>
+              <td style="color: red"><%=@sum_credit%>学分 </td>
             </tr>
             <tr>
-                  <td>获取学分</td>
-                  <td><font color="red"><%=@get_public_must_credit%>学分</font></td>
-                  <td><font color="red"><%=@get_public_credit%>学分</font></td>
-                  <td><font color="red"><%=@get_degree_credit%>学分 </font></td>
-                  <td><font color="red"><%=@get_sum_credit%>学分</font></td>
+              <td>获取学分</td>
+              <td style="color: red"><%=@get_public_must_credit%>学分</td>
+              <td style="color: red"><%=@get_public_credit%>学分</td>
+              <td style="color: red"><%=@get_degree_credit%>学分 </td>
+              <td style="color: red"><%=@get_sum_credit%>学分</td>
             </tr>
             </tbody>
           </table>
@@ -56,5 +55,3 @@
     </div>
   </div>
 </div>
-
-
