--- a/app/views/courses/list.html.erb
+++ b/app/views/courses/list.html.erb
@@ -52,7 +52,7 @@
               <option>读书报告</option>
             </select>
           </div>
-          <div class="form-group" style="float: right;   margin: -52px 10px 20px 30px;width: 92px;">
+          <div class="form-group" style="float: right;   margin: 24px 420px -20px auto;width: 92px;">
             <input type="submit" value="查询">
           </div>
 
@@ -72,7 +72,7 @@
               <th>授课方式</th>
               <th>考试方式</th>
               <th>主讲教师</th>
-              <th>是否设为学位课</th>  <!--新增-->
+              <th>学位课</th>  <!--新增-->
 
             </tr>
             </thead>
