--- a/app/views/courses/searchcourse.html.erb
+++ b/app/views/courses/searchcourse.html.erb
@@ -22,7 +22,7 @@
               <th>授课方式</th>
               <th>考试方式</th>
               <th>主讲教师</th>
-              <th>是否设为学位课</th>  <!--新增-->
+              <th>学位课</th>  <!--新增-->
 
             </tr>
             </thead>
