--- a/app/views/courses/coursedetails.html.erb
+++ b/app/views/courses/coursedetails.html.erb
@@ -1,8 +1,7 @@
- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-2">
       <%= render "shared/sidenav" %>
-
     </div>
     <div class="col-sm-10" style="padding-right: 150px">
       <div class="panel panel-primary">
@@ -10,8 +9,9 @@
           <h3 style="text-align: center; font-size: 20px;" class="panel-title"><%= @course.name %></h3>
         </div>
         <div class="panel-body" style="min-height: 450px">
-          <table class="table table-striped table-hover">
+          <table class="table table-striped table-hover" style="text-align: center">
             <thead style="font-size:15px;text-align: center" >
+            <tbody>
             <tr></tr>
             <tr>
               <td>课程编号</td>
@@ -19,7 +19,7 @@
             </tr>
             <tr>
               <td>课程名称</td>
-              <td><%= @course.name %></td>  
+              <td><%= @course.name %></td>
             </tr>
             <tr>
               <td>课时/学分</td>
@@ -29,7 +29,7 @@
               <td>课程属性</td>
               <td><%= @course.course_type %></td>
             </tr>
-            <tr>  
+            <tr>
               <td>授课方式</td>
               <td><%= @course.teaching_type %></td>
             </tr>
@@ -37,29 +37,28 @@
               <td>上课教室</td>
               <td style="color: red"><%= @course.class_room %></td>
             </tr>
-            <tr>    
+            <tr>
               <td>上课时间</td>
               <td style="color:red"><%= @course.course_time %></td>
             </tr>
-            <tr>   
+            <tr>
               <td>上课周数</td>
               <td style="color:red"><%= @course.course_week %></td>
-            </tr> 
+            </tr>
             <tr>
               <td>考试方式</td>
               <td><%= @course.exam_type %></td>
             </tr>
             <tr>
-              <td>主讲教师</td>  
-              <% if !@course.teacher.nil?%>
+              <td>主讲教师</td>
               <td><%= @course.teacher.name %></td>
-              <% end %>
+            </tr>
+            <tr>
+              <td>学位课</td>
+              <td>否</td>
             </tr>
             <tr></tr>
-
             </thead>
-            <tbody>
-
             </tbody>
           </table>
         </div>
@@ -67,5 +66,3 @@
     </div>
   </div>
 </div>
-
-
