--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -47,9 +47,9 @@
                       <% else %>
                           <td><%= link_to "开通", open_course_url(course), class: 'btn btn-xs btn-info' %></td>
                       <% end %>
-                      <td><%= link_to "删除", course_path(course), :method => "delete", class: 'btn btn-xs btn-primary', :data => {confirm: '确定要删除此课程?'} %></td>
+                      <td><%= link_to "退选", course_path(course), :method => "delete", class: 'btn btn-xs btn-primary', :data => {confirm: '确定要退选此课程?'} %></td>
                   <% elsif student_logged_in? %>
-                      <td><%= link_to "删除", quit_course_path(course), class: 'btn-sm btn-primary',data: { confirm: '确定要删除此课程?'} %></td>
+                      <td><%= link_to "退选", quit_course_path(course), class: 'btn-sm btn-primary',data: { confirm: '确定要退选此课程?'} %></td>
                   <% end %>
                 </tr>
             <% end %>
